--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Text Adventure Game</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+  <div id="container">
+    <h1>Text Adventure Game</h1>
+    <div id="game">
+      <div id="message"></div>
+      <div id="options"></div>
+    </div>
+    <button id="startButton">Start Game</button>
+    <button id="continueButton" style="display: none;">Continue</button>
+    <div id="endButtons" style="display: none;">
+      <button id="quitButton">Quit Game</button>
+      <button id="playAgainButton">Play Again</button>
+    </div>
+  </div>
 
+  <script src="script.js"></script>
+</body>
+</html>
