--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <div id="message"></div>
       <div id="options"></div>
     </div>
-    <button id="startButton">Start Game</button>
+    <div id="inputSection" style="display: none;">
+      <input type="text" id="nameInput" placeholder="Enter your name">
+      <button id="startButton">Start Game</button>
+    </div>
     <button id="continueButton" style="display: none;">Continue</button>
     <div id="endButtons" style="display: none;">
       <button id="quitButton">Quit Game</button>
