--- a/draftone.html
+++ b/draftone.html
@@ -19,7 +19,7 @@
     <button id="play-again-button" onclick="startGame()" style="display: none;">Play Again</button>
 
     <script>
-      // Define your story object with scenes and options
+      // Define your story object with scenes and optionsk
       const story = {
         currentScene: "startGame",
         
